--- a/1-03.md
+++ b/1-03.md
@@ -1,6 +1,23 @@
+# Домашнее задание к занятию 1.3. Типы и характеристики физических сетей Ethernet
+
+### Задача 1
+
 Сетевому инженеру Ларисе поставили задачу:
 Скоммутировать между собой десятые порты коммутаторов SW_1 и SW_2.
 Коммутаторы расположены в соседних стойках расстояние по прямой между ними 1 метр.
 В порты установлены SFP+ SR  MM 850nm
 Вопрос: какой патч-корд должна выбрать Лариса, чтобы выполнить задачу?
 Укажите все характеристики патч-корда: тип, длину, разъемы.
+
+---
+### Задача 2
+Сетевой инженер Лариса хочет премию! Для этого было принято решение сэкономить и не ставить коммутатор для oob management в одном из помещений с оборудованием. Лариса решила по меди подключить oob порты к коммутатору в соседнем помещенийй. Расстояние между стойкой с коммутаторами до другой стойки с oob коммутаторм около 100 м. Как Лариса не пыталась выше 10Mbit/s линки не поднимались. Почему скорость на поднимается выше 10Mbit\s, что изменить чтобы линки поднялись на 100Mbit/s?
+*Дополнительный вопрос к задаче
+
+Получит ли Лариса премию?
+---
+### Дополнительная задача (со звездочкой)
+
+Задача: скроссировать между собой два 40Gbit\s порта коммутаторов. 
+Коммутаторы расположены в стойке через 1 юнит.
+Какой тип передатчиков и патч-кордов вы выберете для кроссировки? Объясните свой выбор.
