--- a/1-03.md
+++ b/1-03.md
@@ -1,23 +1,50 @@
-# Домашнее задание к занятию 1.3. Типы и характеристики физических сетей Ethernet
+# Домашнее задание к занятию 1.3 Типы и характеристики физических сетей Ethernet
 
-### Задача 1
+Домашнее задание выполните в Google Docs и отправьте в личном кабинете на проверку ссылку на ваш документ.
+
+Название файла должно содержать номер лекции и фамилию студента. Пример названия: "1.3 Типы и характеристики физических сетей Ethernet - Александр Александров"
+
+Перед тем как выслать ссылку, убедитесь, что ее содержимое не является приватным (открыто на просмотр всем, у кого есть ссылка). Если необходимо прикрепить дополнительные ссылки, просто добавьте их в свой Google Docs.
+
+Любые вопросы по решению задач задавайте в чате Slack.
+
+---
+
+### Задание 1. 
 
 Сетевому инженеру Ларисе поставили задачу:
 Скоммутировать между собой десятые порты коммутаторов SW_1 и SW_2.
-Коммутаторы расположены в соседних стойках расстояние по прямой между ними 1 метр.
-В порты установлены SFP+ SR  MM 850nm
+
+- Коммутаторы расположены в соседних стойках расстояние по прямой между ними 1 метр.
+- В порты установлены SFP+ SR  MM 850nm
+
 Вопрос: какой патч-корд должна выбрать Лариса, чтобы выполнить задачу?
 Укажите все характеристики патч-корда: тип, длину, разъемы.
 
----
-### Задача 2
-Сетевой инженер Лариса хочет премию! Для этого было принято решение сэкономить и не ставить коммутатор для oob management в одном из помещений с оборудованием. Лариса решила по меди подключить oob порты к коммутатору в соседнем помещенийй. Расстояние между стойкой с коммутаторами до другой стойки с oob коммутаторм около 100 м. Как Лариса не пыталась выше 10Mbit/s линки не поднимались. Почему скорость на поднимается выше 10Mbit\s, что изменить чтобы линки поднялись на 100Mbit/s?
-*Дополнительный вопрос к задаче
+*Приведите ответ в свободной форме.*
 
-Получит ли Лариса премию?
 ---
-### Дополнительная задача (со звездочкой)
+
+### Задача 2.
+
+Сетевой инженер Лариса хочет премию! Для этого было принято решение сэкономить и не ставить коммутатор для oob management в одном из помещений с оборудованием. Лариса решила по меди подключить oob порты к коммутатору в соседнем помещении. Расстояние от стойки с коммутаторами до другой стойки с oob коммутаторм около 100 м. Как Лариса не пыталась выше 10Mbit/s линки не поднимались. 
+
+Почему скорость на поднимается выше 10Mbit\s, что изменить чтобы линки поднялись на 100Mbit/s? 
+Получит ли Лариса премию?
+
+*Приведите ответ в свободной форме.*
+
+---
+
+## Дополнительные задания (со звездочкой*)
+Эти задания дополнительные (не обязательные к выполнению) и никак не повлияют на получение вами зачета по этому домашнему заданию. Вы можете их выполнить, если хотите глубже и/или шире разобраться в материале.
+
+---
+
+### Задача 3*.
 
 Задача: скроссировать между собой два 40Gbit\s порта коммутаторов. 
 Коммутаторы расположены в стойке через 1 юнит.
 Какой тип передатчиков и патч-кордов вы выберете для кроссировки? Объясните свой выбор.
+
+*Приведите ответ в свободной форме.*
