--- a/1-03.md
+++ b/1-03.md
@@ -29,7 +29,10 @@
 
 Сетевой инженер Лариса хочет премию! Для этого было принято решение сэкономить и не ставить коммутатор для oob management в одном из помещений с оборудованием. Лариса решила по меди подключить oob порты к коммутатору в соседнем помещении. Расстояние от стойки с коммутаторами до другой стойки с oob коммутаторм около 100 м. Как Лариса не пыталась выше 10Mbit/s линки не поднимались. 
 
-Почему скорость на поднимается выше 10Mbit\s, что изменить чтобы линки поднялись на 100Mbit/s? 
+Почему скорость на поднимается выше 10Mbit\s, что изменить, чтобы линки поднялись на 100Mbit/s? 
+
+Дополнительный вопрос со звездочкой(*):
+
 Получит ли Лариса премию?
 
 *Приведите ответ в свободной форме.*
