--- a/1-05.md
+++ b/1-05.md
@@ -12,19 +12,44 @@
 
 ### Задание 1. 
 
+Опишите возможные системы соединений устройств к сетевым устройствам тип маршрутизаторы, коммутаторы, концентраторы. 
 
+Приведите тип подключения и опишите их характеристики. 
 ---
 
 ### Задача 2.
 
+Опишите отличия в подключении для настройки сетевых устройств AUX, LAN, WAN, Console? 
+
+**Приведите ответ в свободной форме.**
+
 
 ---
+### Задача 3.
 
+Опишите в чем преимущество и в чем минусы подключения для настройки устройств по протоколу Telnet, ssh, http, https. Какие методы безопасности могут быть предусмотрены для защиты и какие протоколы безопасные? 
+
+**Приведите ответ в свободной форме.**
+
+
+
+---
+### Задача 4.
+
+
+Создайте логическую топологию из компьютера для управления, коммутатора и маршрутизатора. Подключите устройства последовательно. Настройте устройства для сетевого взаимодействия. Проверти доступность компьютера и маршрутизатора при помощи ICMP запросов. Выполнить базовую настройку устройств с точки зрения безопасности – установить пароли на разные уровни доступа, изменить имена устройств, реализовать безопасность на различных уровнях работы. Отключите процедуры широковещательной рассылки.
+
+**Приведите ответы выполнив скриншоты выполненных этапов.**
+
+---
 ## Дополнительные задания (со звездочкой*)
 Эти задания дополнительные (не обязательные к выполнению) и никак не повлияют на получение вами зачета по этому домашнему заданию. Вы можете их выполнить, если хотите глубже и/или шире разобраться в материале.
 
----
+### Задача 5 *.
 
-### Задача 3*.
+Познакомитесь с командами управления устройств, например в CLI OIS при помощи “?” можно просмотреть настройки устройства. Требуется после выполнения настройки вывести информацию о настроенных конфигурациях сетевых устройств, статистики по пакетам и маршрутизации. Выполнить резервирования и проверку состояния устройства после перезагрузки. Выполнять процессы требуется через pc с использованием ssh. 
+
+Приведите ответы выполнив скриншоты выполненных этапов.
+
 
 
