--- a/1-03.md
+++ b/1-03.md
@@ -13,9 +13,9 @@
 ### Задание 1. 
 
 Сетевому инженеру Ларисе поставили задачу:
-Скоммутировать между собой десятые порты коммутаторов SW_1 и SW_2.
+cкоммутировать между собой десятые порты коммутаторов SW_1 и SW_2.
 
-- Коммутаторы расположены в соседних стойках расстояние по прямой между ними 1 метр.
+- Коммутаторы расположены в соседних стойках, расстояние по прямой между ними 1 метр.
 - В порты установлены SFP+ SR  MM 850nm
 
 Вопрос: какой патч-корд должна выбрать Лариса, чтобы выполнить задачу?
@@ -25,15 +25,11 @@
 
 ---
 
-### Задача 2.
+### Задача 2.1
 
-Сетевой инженер Лариса хочет премию! Для этого было принято решение сэкономить и не ставить коммутатор для oob management в одном из помещений с оборудованием. Лариса решила по меди подключить oob порты к коммутатору в соседнем помещении. Расстояние от стойки с коммутаторами до другой стойки с oob коммутаторм около 100 м. Как Лариса не пыталась выше 10Mbit/s линки не поднимались. 
+Сетевой инженер Лариса хочет премию! Для этого было принято решение сэкономить и не ставить коммутатор для oob management в одном из помещений с оборудованием. Лариса решила по меди подключить oob порты к коммутатору в соседнем помещении. Расстояние от стойки с коммутаторами до другой стойки с oob коммутатором около 100 м. Как Лариса не пыталась, выше 10Mbit/s линки не поднимались. 
 
-Почему скорость на поднимается выше 10Mbit\s, что изменить, чтобы линки поднялись на 100Mbit/s? 
-
-Дополнительный вопрос со звездочкой(*):
-
-Получит ли Лариса премию?
+Почему скорость на поднимается выше 10Mbit\s? Что нужно изменить, чтобы линки поднялись на 100Mbit/s? 
 
 *Приведите ответ в свободной форме.*
 
@@ -41,6 +37,12 @@
 
 ## Дополнительные задания (со звездочкой*)
 Эти задания дополнительные (не обязательные к выполнению) и никак не повлияют на получение вами зачета по этому домашнему заданию. Вы можете их выполнить, если хотите глубже и/или шире разобраться в материале.
+
+### Задача 2.2*
+
+Получит ли Лариса премию? (см. задание 2.1)
+
+*Приведите ответ в свободной форме.*
 
 ---
 
