--- a/1-02.md
+++ b/1-02.md
@@ -13,16 +13,16 @@
 ### Подготовка
 
 1. Установите программу **Wireshark**;
-2. запустите захват с сетевого интерфейса;
-3. запустите браузер и зайдите на любой сайт.
+2. Запустите захват с сетевого интерфейса;
+3. Запустите браузер и зайдите на любой сайт.
 
 ------
 
 ### Задание 1 (Ethernet).
 
 1. Выберите несколько пакетов из захваченного трафика;
-2. откройте уровень **Ethernet**;
-3. определите по MAC-адресу нескольких производителей сетевого оборудования.
+2. Откройте уровень **Ethernet**;
+3. Определите по MAC-адресу нескольких производителей сетевого оборудования.
 
 *Приведите ответ в свободной форме.*
 
@@ -31,8 +31,8 @@
 ### Задание 2 (IP).
 
 1. Выберите несколько пакетов из захваченного трафика;
-2. откройте уровень **IP**;
-3. какие флаги протокола IP вам удалось обнаружить?
+2. Откройте уровень **IP**;
+3. Какие флаги протокола IP вам удалось обнаружить?
 
 *Приведите ответ в свободной форме.*
 
@@ -41,8 +41,8 @@
 ### Задание 3 (TCP, UDP).
 
 1. Выберите несколько **UDP** (DNS или мессенджеры) и **TCP** (http) пакетов  из захваченного трафика;
-2. откройте уровень TCP\UDP;
-3. сравните пакеты TCP и UDP между собой. В чём отличия?
+2. Откройте уровень **TCP\UDP**;
+3. Сравните пакеты TCP и UDP между собой. В чём отличия?
 
 *Приведите ответ в свободной форме.*
 
@@ -51,8 +51,8 @@
 ### Задание 4 (HTTP).
 
 1. Перейдите на сайт **kremlin.ru**;
-2. выберите любой http-потоки (через меню, открывающееся по нажатию правой кнопки мыши, - следовать - поток HTTP);
-3. какой поток у вас открылся на самом деле (посмотрите в строке ввода фильтров)? Почему?
+2. Выберите любой http-поток (через меню, открывающееся по нажатию правой кнопки мыши, - следовать - поток HTTP);
+3. Какой поток у вас открылся на самом деле (посмотрите в строке ввода фильтров)? Почему?
 
 *Приведите ответ в свободной форме.*
 
