--- a/1-02.md
+++ b/1-02.md
@@ -13,7 +13,7 @@
 ### Подготовка
 
 1. Установите программу **Wireshark**;
-2. Запустите захват с сетевого интерфейса;
+2. Запустите захват трафика с сетевого интерфейса;
 3. Запустите браузер и зайдите на любой сайт.
 
 ------
