--- a/1-05.md
+++ b/1-05.md
@@ -28,7 +28,7 @@
 
 ### Задача 3.
 
-Опишите плюсы и минусы подключения для настройки устройств по протоколу Telnet, ssh, http, https. Какие методы безопасности могут быть предусмотрены для защиты и какие протоколы безопасные? 
+Опишите плюсы и минусы подключения для настройки устройств по протоколу Telnet, ssh, http, https. Какие методы безопасности могут быть предусмотрены для защиты и какие протоколы безопасности? 
 
 *Приведите ответ в свободной форме.*
 
