--- a/1-05.md
+++ b/1-05.md
@@ -54,7 +54,7 @@
 
 ### Задача 5*.
 
-Познакомьтесь с командами управления устройств, например, в CLI IOS при помощи “?” можно просмотреть настройки устройства. 
+Познакомьтесь с командами управления устройств. Например, в CLI IOS при помощи “?” можно просмотреть настройки устройства. 
 После выполнения настройки выведите информацию о настроенных конфигурациях сетевых устройств и статистику по пакетам и маршрутизации. 
 Выполните резервирование и проверку состояния устройства после перезагрузки. 
 
