--- a/1-05.md
+++ b/1-05.md
@@ -18,7 +18,7 @@
 
 ---
 
-### Задача 2.
+### Задание 2.
 
 Опишите отличия в подключении для настройки сетевых устройств AUX, LAN, WAN, Console? 
 
@@ -26,7 +26,7 @@
 
 ---
 
-### Задача 3.
+### Задание 3.
 
 Опишите плюсы и минусы подключения для настройки устройств по протоколу Telnet, ssh, http, https. Какие методы безопасности могут быть предусмотрены для защиты и какие протоколы безопасности? 
 
@@ -34,7 +34,7 @@
 
 ---
 
-### Задача 4.
+### Задание 4.
 
 Создайте логическую топологию из компьютера для управления, коммутатора и маршрутизатора. Подключите устройства последовательно. Настройте устройства для сетевого взаимодействия. Проверьте доступность компьютера и маршрутизатора при помощи ICMP запросов. 
 
