--- a/1-05.md
+++ b/1-05.md
@@ -12,7 +12,7 @@
 
 ### Задание 1. 
 
-Опишите возможные системы соединений устройств с сетевыми устройствами: маршрутизаторы, коммутаторы, концентраторы. 
+Опишите возможные системы соединения устройств с сетевыми устройствами: маршрутизаторы, коммутаторы, концентраторы. 
 
 *Приведите тип подключения и опишите их характеристики.*
 
@@ -36,10 +36,16 @@
 
 ### Задание 4.
 
-Создайте логическую топологию из компьютера для управления, коммутатора и маршрутизатора. Подключите устройства последовательно. Настройте устройства для сетевого взаимодействия. Проверьте доступность компьютера и маршрутизатора при помощи ICMP запросов. 
+Выполните задание по шагам:
 
-Выполните базовую настройку устройств с точки зрения безопасности:
-
+1. В Cisco Packet Tracer cоздайте логическую топологию, состоящую из:
+- компьютера для управления,
+- коммутатора,
+- маршрутизатора.
+2. Подключите устройства последовательно.
+3. Настройте устройства для сетевого взаимодействия.
+4. Проверьте доступность компьютера и маршрутизатора при помощи ICMP запросов. 
+5. Выполните базовую настройку устройств с точки зрения безопасности:
 - установите пароли на разные уровни доступа, 
 - измените имена устройств, 
 - реализуйте безопасность на различных уровнях работы, 
@@ -54,7 +60,7 @@
 
 ### Задача 5*.
 
-Данная работа выполняется в среде Cisco Packet Tracer. Его можно скачать с netacad.com после регистрации. Познакомьтесь с командами управления устройств. Например, в CLI IOS при помощи “?” можно просмотреть настройки устройства. 
+Данная работа выполняется в среде Cisco Packet Tracer. Познакомьтесь с командами управления устройств. Например, в CLI IOS при помощи “?” можно просмотреть настройки устройства. 
 После выполнения настройки выведите информацию о настроенных конфигурациях сетевых устройств и статистику по пакетам и маршрутизации. 
 Выполните резервирование и проверку состояния устройства после перезагрузки. 
 
