--- a/1-05.md
+++ b/1-05.md
@@ -20,7 +20,7 @@
 
 ### Задание 2.
 
-Опишите отличия в подключении для настройки сетевых устройств AUX, LAN, WAN, Console? 
+Опишите отличия в подключении  к устройствам для их настройки через порты AUX, LAN, WAN, Console? 
 
 *Приведите ответ в свободной форме.*
 
@@ -28,7 +28,8 @@
 
 ### Задание 3.
 
-Опишите плюсы и минусы подключения для настройки устройств по протоколу Telnet, ssh, http, https. Какие методы безопасности могут быть предусмотрены для защиты и какие протоколы безопасности? 
+Опишите плюсы и минусы подключения к устройствам для работы с ними по протоколам Telnet, ssh, http, https.
+Какие методы безопасности могут быть предусмотрены для усиления защиты?  
 
 *Приведите ответ в свободной форме.*
 
@@ -60,10 +61,11 @@
 
 ### Задача 5*.
 
-Данная работа выполняется в среде Cisco Packet Tracer. Познакомьтесь с командами управления устройств. Например, в CLI IOS при помощи “?” можно просмотреть настройки устройства. 
-После выполнения настройки выведите информацию о настроенных конфигурациях сетевых устройств и статистику по пакетам и маршрутизации. 
-Выполните резервирование и проверку состояния устройства после перезагрузки. 
+Данная работа выполняется в среде Cisco Packet Tracer по результатам выполнения задания 4 с использованием подключения по протоколу ssh. Подключение производится через объект компьютер к любому из устройств (коммутатор или маршрутизатор):
 
-Выполнять процессы требуется через pc с использованием ssh. 
+1. Познакомьтесь с командами управления устройств. Например, в CLI IOS при помощи “?” можно просмотреть настройки устройства.
+2. После выполнения настройки выведите информацию о настроенных конфигурациях сетевых устройств и статистику по пакетам и маршрутизации. 
+3. Выполните резервирование и проверку состояния устройства после перезагрузки устройства.
+
 
 *Приведите скриншоты выполненных этапов.*
