--- a/1-03.md
+++ b/1-03.md
@@ -25,7 +25,7 @@ cкоммутировать между собой десятые порты ко
 
 ---
 
-### Задача 2.1
+### Задание 2
 
 Сетевой инженер Лариса хочет премию! Для этого было принято решение сэкономить и не ставить коммутатор для oob management в одном из помещений с оборудованием. Лариса решила по меди подключить oob порты к коммутатору в соседнем помещении. Расстояние от стойки с коммутаторами до другой стойки с OOB коммутатором около 100 м. Как Лариса не пыталась, выше 10Mbit/s линки не поднимались. 
 
@@ -38,15 +38,8 @@ cкоммутировать между собой десятые порты ко
 ## Дополнительные задания (со звездочкой*)
 Эти задания дополнительные (не обязательные к выполнению) и никак не повлияют на получение вами зачета по этому домашнему заданию. Вы можете их выполнить, если хотите глубже и/или шире разобраться в материале.
 
-### Задача 2.2*
 
-Получит ли Лариса премию? (см. задание 2.1)
-
-*Приведите ответ в свободной форме.*
-
----
-
-### Задача 3*.
+### Задание 3*.
 
 Задача: скроссировать между собой два 40Gbit\s порта коммутаторов. 
 Коммутаторы расположены в стойке через 1 юнит.
