--- a/1-03.md
+++ b/1-03.md
@@ -39,7 +39,7 @@ cкоммутировать между собой десятые порты ко
 Эти задания дополнительные (не обязательные к выполнению) и никак не повлияют на получение вами зачета по этому домашнему заданию. Вы можете их выполнить, если хотите глубже и/или шире разобраться в материале.
 
 
-### Задание 3*.
+### Задание 3*
 
 Задача: скроссировать между собой два 40Gbit\s порта коммутаторов. 
 Коммутаторы расположены в стойке через 1 юнит.
