--- a/1-02.md
+++ b/1-02.md
@@ -1,12 +1,14 @@
 # Домашнее задание к занятию 1.2 Сетевые модели TCP/IP и OSI
 
-Домашнее задание выполните в Google Docs и отправьте в личном кабинете на проверку ссылку на ваш документ.
+### Инструкция к выполнению домашнего задания
 
-Название файла должно содержать номер лекции и фамилию студента. Пример названия: "1.2 Сетевые модели TCP/IP и OSI - Александр Александров"
-
-Перед тем как выслать ссылку, убедитесь, что ее содержимое не является приватным (открыто на просмотр всем, у кого есть ссылка). Если необходимо прикрепить дополнительные ссылки, просто добавьте их в свой Google Docs.
-
-Любые вопросы по решению задач задавайте в чате Slack.
+1. Сделайте копию [Шаблона для домашнего задания](https://docs.google.com/document/d/1youKpKm_JrC0UzDyUslIZW2E2bIv5OVlm_TQDvH5Pvs/edit) себе на Google Disk.
+2. В названии файла введите корректное название лекции и вашу фамилию и имя.
+3. Зайдите в “Настройки доступа” и выберите доступ “Просматривать могут в Интернете все, у кого есть ссылка”.
+ Ссылка на инструкцию [Как предоставить доступ к файлам и папкам на Google Диске](https://support.google.com/docs/answer/2494822?hl=ru&co=GENIE.Platform%3DDesktop)
+5. Выполните домашнее задание, запишите ответы и приложите необходимые скриншоты в свой Google Doc.
+6. Для проверки домашнего задания преподавателем отправьте ссылку на ваш документ в личном кабинете.
+7. Любые вопросы по решению задач задавайте в чате Slack.
 
 ------
 
