--- a/1-02.md
+++ b/1-02.md
@@ -1,14 +1,19 @@
 # Домашнее задание к занятию 1.2 Сетевые модели TCP/IP и OSI
 
+### Цель задания
+1. Изучить сетевую модель TCP\IP на практике.
+2. Познакомиться со сниффером сетевого трафика Wireshark.
+
 ### Инструкция к выполнению домашнего задания
 
 1. Сделайте копию [Шаблона для домашнего задания](https://docs.google.com/document/d/1youKpKm_JrC0UzDyUslIZW2E2bIv5OVlm_TQDvH5Pvs/edit) себе на Google Disk.
 2. В названии файла введите корректное название лекции и вашу фамилию и имя.
-3. Зайдите в “Настройки доступа” и выберите доступ “Просматривать могут в Интернете все, у кого есть ссылка”.
+3. Зайдите в “Настройки доступа” и выберите доступ “Просматривать могут все в Интернете, у кого есть ссылка”.
  Ссылка на инструкцию [Как предоставить доступ к файлам и папкам на Google Диске](https://support.google.com/docs/answer/2494822?hl=ru&co=GENIE.Platform%3DDesktop)
-5. Выполните домашнее задание, запишите ответы и приложите необходимые скриншоты в свой Google Doc.
-6. Для проверки домашнего задания преподавателем отправьте ссылку на ваш документ в личном кабинете.
-7. Любые вопросы по решению задач задавайте в чате Slack.
+5. Скопируйте текст задания в свой документ.
+6. Выполните домашнее задание, запишите ответы и приложите необходимые скриншоты в свой Google Doc.
+7. Для проверки домашнего задания преподавателем отправьте ссылку на ваш документ в личном кабинете.
+8. Любые вопросы по решению задач задавайте в чате Slack.
 
 ------
 
