--- a/1-05.md
+++ b/1-05.md
@@ -1,12 +1,20 @@
 # Домашнее задание к занятию 1.5 Подключение к оборудованию Cisco/Mikrotik/Juniper, базовая настройка. 
 
-Домашнее задание выполните в Google Docs и отправьте в личном кабинете на проверку ссылку на ваш документ.
+### Цель задания
 
-Название файла должно содержать номер лекции и фамилию студента. Пример названия: "1.5 Подключение к оборудованию Cisco/Mikrotik/Juniper, базовая настройка  - Александр Александров"
+1. Создать сетевую топологию в Cisco Packet Tracer.
+2. Настроить сетевые устройства.
 
-Перед тем как выслать ссылку, убедитесь, что ее содержимое не является приватным (открыто на просмотр всем, у кого есть ссылка). Если необходимо прикрепить дополнительные ссылки, просто добавьте их в свой Google Docs.
+### Инструкция к выполнению домашнего задания
 
-Любые вопросы по решению задач задавайте в чате Slack.
+1. Сделайте копию [Шаблона для домашнего задания](https://docs.google.com/document/d/1youKpKm_JrC0UzDyUslIZW2E2bIv5OVlm_TQDvH5Pvs/edit) себе на Google Disk.
+2. В названии файла введите корректное название лекции и вашу фамилию и имя.
+3. Зайдите в “Настройки доступа” и выберите доступ “Просматривать могут все в Интернете, у кого есть ссылка”.
+ Ссылка на инструкцию [Как предоставить доступ к файлам и папкам на Google Диске](https://support.google.com/docs/answer/2494822?hl=ru&co=GENIE.Platform%3DDesktop)
+5. Скопируйте текст задания в свой документ.
+6. Выполните домашнее задание, запишите ответы и приложите необходимые скриншоты в свой Google Doc.
+7. Для проверки домашнего задания преподавателем отправьте ссылку на ваш документ в личном кабинете.
+8. Любые вопросы по решению задач задавайте в чате Slack.
 
 ---
 
@@ -61,7 +69,7 @@
 
 ### Задача 5*.
 
-Данная работа выполняется в среде Cisco Packet Tracer по результатам выполнения задания 4 с использованием подключения по протоколу ssh. Подключение производится через объект компьютер к любому из устройств (коммутатор или маршрутизатор):
+Данная работа выполняется в среде Cisco Packet Tracer по результатам выполнения задания 4 с использованием подключения по протоколу ssh. Подключение производится через объект "компьютер" к любому из устройств (коммутатор или маршрутизатор):
 
 1. Познакомьтесь с командами управления устройств. Например, в CLI IOS при помощи “?” можно просмотреть настройки устройства.
 2. После выполнения настройки выведите информацию о настроенных конфигурациях сетевых устройств и статистику по пакетам и маршрутизации. 
