--- a/1-02.md
+++ b/1-02.md
@@ -2,7 +2,7 @@
 
 ### Цель задания
 1. Изучить сетевую модель TCP\IP на практике.
-2. Познакомиться со сниффером сетевого трафика Wireshark.
+2. Установить и поработать со сниффером сетевого трафика Wireshark.
 
 ### Инструкция к выполнению домашнего задания
 
