--- a/1-04.md
+++ b/1-04.md
@@ -50,7 +50,7 @@
 
 ### Задача 4*
 
-Соедините коммутаторы дополнительным проводом. Как будет работать ping в этом случае?
+Соедините коммутаторы дополнительным проводом. Что произойдет в этом случае?
 
 *Приведите ответ в свободной форме.*
 
