--- a/1-05.md
+++ b/1-05.md
@@ -2,7 +2,7 @@
 
 ### Цель задания
 
-1. Создать сетевую топологию в Cisco Packet Tracer.
+1. Создать сетевую топологию.
 2. Настроить сетевые устройства.
 
 ### Инструкция к выполнению домашнего задания
