--- a/1-05.md
+++ b/1-05.md
@@ -20,7 +20,7 @@
 
 ### Задание 1. 
 
-Опишите возможные системы соединения устройств с сетевыми устройствами: маршрутизаторы, коммутаторы, концентраторы. 
+Опишите возможные типы соединения с сетевыми устройствами: маршрутизаторы, коммутаторы, концентраторы. 
 
 *Приведите тип подключения и опишите их характеристики.*
 
@@ -58,7 +58,7 @@
 - установите пароли на разные уровни доступа, 
 - измените имена устройств, 
 - реализуйте безопасность на различных уровнях работы, 
-- отключите процедуры широковещательной рассылки.
+- oтключает в маршрутизаторе функции поиска по DNS.
 
 *Приведите скриншоты выполненных этапов.*
 
