--- a/1-05.md
+++ b/1-05.md
@@ -43,7 +43,7 @@
 
 ---
 
-### Задание 4.
+### Задание 4. Лабораторная работа.
 
 Выполните задание по шагам:
 
@@ -60,7 +60,7 @@
 - реализуйте безопасность на различных уровнях работы, 
 - oтключает в маршрутизаторе функции поиска по DNS.
 
-*Приведите скриншоты выполненных этапов.*
+*Приведите ответ в виде pkt-файла.*
 
 ---
 
@@ -76,4 +76,4 @@
 3. Выполните резервирование и проверку состояния устройства после перезагрузки устройства.
 
 
-*Приведите скриншоты выполненных этапов.*
+*Приведите ответ в виде pkt-файла.*
