--- a/1-03.md
+++ b/1-03.md
@@ -20,8 +20,7 @@
 
 ### Задание 1. 
 
-Сетевому инженеру Ларисе поставили задачу:
-cкоммутировать между собой десятые порты коммутаторов SW_1 и SW_2.
+Cкоммутировать между собой 10Gbit\s порты коммутаторов SW_1 и SW_2.
 
 - Коммутаторы расположены в соседних стойках, расстояние по прямой между ними 1 метр.
 - В порты установлены SFP+ SR  MM 850nm
@@ -35,7 +34,7 @@ cкоммутировать между собой десятые порты ко
 
 ### Задание 2
 
-Сетевой инженер Лариса хочет премию! Для этого было принято решение сэкономить и не ставить коммутатор для oob management в одном из помещений с оборудованием. Лариса решила по меди подключить oob порты к коммутатору в соседнем помещении. Расстояние от стойки с коммутаторами до другой стойки с OOB коммутатором около 100 м. Как Лариса не пыталась, выше 10Mbit/s линки не поднимались. 
+При коммутации медных FastEthernet портов коммутаторов линк согласуется только в 10Mbit\s. Длина линии немного больше 100 метров. 
 
 Почему скорость не поднимается выше 10Mbit\s? Что нужно изменить, чтобы линки поднялись на 100Mbit/s? 
 
