--- a/1-03.md
+++ b/1-03.md
@@ -25,7 +25,7 @@ Cкоммутировать между собой 10Gbit\s порты комму
 - Коммутаторы расположены в соседних стойках, расстояние по прямой между ними 1 метр.
 - В порты установлены SFP+ SR  MM 850nm
 
-Вопрос: какой патч-корд должна выбрать Лариса, чтобы выполнить задачу?
+Вопрос: какой патч-корд выбрать, чтобы выполнить задачу?
 Укажите все характеристики патч-корда: тип, длину, разъемы.
 
 *Приведите ответ в свободной форме.*
