--- a/1-05.md
+++ b/1-05.md
@@ -43,7 +43,7 @@
 
 ---
 
-### Задание 4. Лабораторная работа.
+### Задание 4. Лабораторная работа "Подключение и базовая настройка сетевого оборудования"
 
 Выполните задание по шагам:
 
