--- a/1-05.md
+++ b/1-05.md
@@ -28,7 +28,7 @@
 
 ### Задание 2.
 
-Опишите отличия в подключении  к устройствам для их настройки через порты AUX, LAN, WAN, Console? 
+Опишите отличия в подключении  к устройствам для их настройки через порты AUX, Console? 
 
 *Приведите ответ в свободной форме.*
 
@@ -54,26 +54,9 @@
 2. Подключите устройства последовательно.
 3. Настройте устройства для сетевого взаимодействия.
 4. Проверьте доступность компьютера и маршрутизатора при помощи ICMP запросов. 
-5. Выполните базовую настройку устройств с точки зрения безопасности:
-- установите пароли на разные уровни доступа, 
-- измените имена устройств, 
-- реализуйте безопасность на различных уровнях работы, 
-- oтключает в маршрутизаторе функции поиска по DNS.
+5. На коммутаторе настройте протокол Telnet. Проверьте, что удаленное подключение возможно и работает успешно.
+6. На маршрутизаторе настройте протокол SSH. Проверьте, что удаленное подключение возможно и работает успешно.
 
 *Приведите ответ в виде pkt-файла.*
 
----
 
-## Дополнительные задания (со звездочкой*)
-Эти задания дополнительные (не обязательные к выполнению) и никак не повлияют на получение вами зачета по этому домашнему заданию. Вы можете их выполнить, если хотите глубже и/или шире разобраться в материале.
-
-### Задача 5*.
-
-Данная работа выполняется в среде Cisco Packet Tracer по результатам выполнения задания 4 с использованием подключения по протоколу ssh. Подключение производится через объект "компьютер" к любому из устройств (коммутатор или маршрутизатор):
-
-1. Познакомьтесь с командами управления устройств. Например, в CLI IOS при помощи “?” можно просмотреть настройки устройства.
-2. После выполнения настройки выведите информацию о настроенных конфигурациях сетевых устройств и статистику по пакетам и маршрутизации. 
-3. Выполните резервирование и проверку состояния устройства после перезагрузки устройства.
-
-
-*Приведите ответ в виде pkt-файла.*
