--- a/1-03.md
+++ b/1-03.md
@@ -36,7 +36,7 @@ Cкоммутировать между собой 10Gbit\s порты комму
 
 При коммутации медных FastEthernet портов коммутаторов линк согласуется только в 10Mbit\s. Длина линии немного больше 100 метров. 
 
-Почему скорость не поднимается выше 10Mbit\s? Что нужно изменить, чтобы линки поднялись на 100Mbit/s? 
+Почему скорость не поднимается выше 10Mbit\s? Что нужно изменить, чтобы линки поднялись на 100Mbit\s? 
 
 *Приведите ответ в свободной форме.*
 
