--- a/1-03.md
+++ b/1-03.md
@@ -26,7 +26,7 @@ Cкоммутировать между собой 10Gbit\s порты комму
 - В порты установлены SFP+ SR  MM 850nm
 
 Вопрос: какой патч-корд выбрать, чтобы выполнить задачу?
-Укажите все характеристики патч-корда: тип, длину, разъемы.
+Укажите все характеристики патч-корда: тип, длину, форму коннекторов, класс и вид ОВ.
 
 *Приведите ответ в свободной форме.*
 
@@ -36,7 +36,7 @@ Cкоммутировать между собой 10Gbit\s порты комму
 
 При коммутации медных FastEthernet портов коммутаторов линк согласуется только в 10Mbit\s. Длина линии немного больше 100 метров. 
 
-Почему скорость не поднимается выше 10Mbit\s? Что нужно изменить, чтобы линки поднялись на 100Mbit/s? 
+Почему скорость не поднимается выше 10Mbit\s? Что нужно изменить, чтобы линки поднялись на 100Mbit\s? 
 
 *Приведите ответ в свободной форме.*
 
