--- a/1-04.md
+++ b/1-04.md
@@ -16,6 +16,12 @@
 7. Для проверки домашнего задания преподавателем отправьте ссылку на ваш документ в личном кабинете.
 8. Любые вопросы по решению задач задавайте в чате учебной группы.
 
+### Чеклист готовности к домашнему заданию
+
+1. Вы посмотрели у себя в личном кабинете занятие "Cisco Packet Tracer".
+2. Вы установили программу Cisco Packet Tracer на своём компьютере (ссылки и инструкция есть в чате учебной группы).
+
+
 ------
 
 ### Задание 1.
