--- a/1-05.md
+++ b/1-05.md
@@ -57,6 +57,6 @@
 5. На коммутаторе настройте протокол Telnet. Проверьте, что удаленное подключение возможно и работает успешно.
 6. На маршрутизаторе настройте протокол SSH. Проверьте, что удаленное подключение возможно и работает успешно.
 
-*Приведите ответ в виде pkt-файла.*
+*Приложите настроенные логины и пароли к решению, приведите ответ в виде pkt-файла*
 
 
