--- a/1-05.md
+++ b/1-05.md
@@ -54,8 +54,8 @@
 2. Подключите устройства последовательно.
 3. Настройте устройства для сетевого взаимодействия.
 4. Проверьте доступность компьютера и маршрутизатора при помощи ICMP запросов. 
-5. На коммутаторе настройте протокол Telnet. Проверьте, что удаленное подключение возможно и работает успешно.
-6. На маршрутизаторе настройте протокол SSH. Проверьте, что удаленное подключение возможно и работает успешно.
+5. На коммутаторе настройте протокол Telnet. Проверьте, что удаленное подключение возможно и работает успешно. Пароль должен быть зашифрован!
+6. На маршрутизаторе настройте протокол SSH. Проверьте, что удаленное подключение возможно и работает успешно. Пароль должен быть зашифрован!
 
 *Приложите настроенные логины и пароли к решению, приведите ответ в виде pkt-файла*
 
