--- a/1-05.md
+++ b/1-05.md
@@ -1,4 +1,4 @@
-# Домашнее задание к занятию 1.5 Подключение к оборудованию Cisco/Mikrotik/Juniper, базовая настройка. 
+# Домашнее задание к занятию 1.5 Подключение к оборудованию, базовая настройка. 
 
 ### Цель задания
 
