--- a/1-04.md
+++ b/1-04.md
@@ -44,7 +44,7 @@
 
 ### Задание 3.
 
-Перейдите на коммутатор и выполните команду **show mac-address-table**
+Перейдите на коммутатор и выполните команду **show mac address-table**
 
 *Приведите ответ в виде снимка экрана.*
 
