--- a/1-04.md
+++ b/1-04.md
@@ -14,7 +14,7 @@
 5. Скопируйте текст задания в свой документ.
 6. Выполните домашнее задание, запишите ответы и приложите необходимые скриншоты в свой Google Doc.
 7. Для проверки домашнего задания преподавателем отправьте ссылку на ваш документ в личном кабинете.
-8. Любые вопросы по решению задач задавайте в чате учебной группы.
+8. Любые вопросы по решению задач можно задать в чате учебной группы, в чате поддержки или в разделе «Вопросы по заданию» в личном кабинете.
 
 ### Чеклист готовности к домашнему заданию
 
